More fixes to test - including temp hack for BootstrapService