@@ -51,7 +51,16 @@ java {
 tasks.named<Test>("test") {
     useJUnitPlatform()
 }
-
+tasks.withType<Test>().configureEach {
+    jvmArgs(
+        "--add-opens=java.base/java.util=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+        "--add-opens=java.base/java.time=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio=ALL-UNNAMED"
+    )
+}
 publishing {
     publications {
         create<MavenPublication>(project.name) {
